Updated: Content & File Struc

--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bingo Game</title>
+  <title>Imposter Syndrome</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header>
-    <h1 class="game-title">我的 Bingo 挑战</h1>
+    <h1 class="game-title">Imposter Syndrome</h1>
   </header>
 
   <main>
-    <div id="bingo-count">已完成 Bingo: 0</div>
+    <div id="bingo-count">Bingo: 0</div>
     <div id="bingo-grid" class="bingo-grid"></div>
-    <button id="reset-button">重置游戏</button>
+    <button id="reset-button">RESET</button>
   </main>
 
   <footer>
-    <p>版权所有 © 2025 Alex</p>
+    <p>© CTB24-25 Hackathon Group No. H130</p>
+    <p>Dev: alex-y.dev / ChatGPT-4o</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script/bingo-main.js"></script>
 </body>
 </html>
