Add: Two Version

--- a/Growth_Mindset.html
+++ b/Growth_Mindset.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imposter Syndrome</title>
+  <title>BINGO | Growth Mindset</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header>
-    <h1 class="game-title">Imposter Syndrome</h1>
+    <h1 class="game-title">“I’m Becoming Who I’m Meant to Be” – A Growth Mindset Pathway to Self-Affirmation</h1>
   </header>
 
   <main>
