--- a/Growth_Mindset.html
+++ b/Growth_Mindset.html
@@ -23,6 +23,6 @@
     <p>Dev: alex-y.dev / ChatGPT-4o</p>
   </footer>
 
-  <script src="script/bingo-main.js"></script>
+  <script src="script/BINGO_Growth-Mindset.js"></script>
 </body>
 </html>
