Add: New Function

--- a/Two_Mindset.html
+++ b/Two_Mindset.html
@@ -144,6 +144,83 @@
       color: #666;
       margin: 1rem 0 0 0;
     }
+
+    .bingo-line {
+        position: absolute;
+        height: 4px;
+        background: red;
+        z-index: 10;
+        animation: glow 1s ease-in-out infinite alternate;
+    }
+
+    .bingo-line.row-0 { top: 18%; left: 10%; right: 10%; }
+    .bingo-line.row-1 { top: 48%; left: 10%; right: 10%; }
+    .bingo-line.row-2 { top: 78%; left: 10%; right: 10%; }
+
+    .bingo-line.col-0 {
+        top: 10%;
+        bottom: 10%;
+        left: 18%;
+        width: 4px;
+        background: blue;
+    }
+    .bingo-line.col-1 {
+        top: 10%;
+        bottom: 10%;
+        left: 48%;
+        width: 4px;
+        background: blue;
+    }
+    .bingo-line.col-2 {
+        top: 10%;
+        bottom: 10%;
+        left: 78%;
+        width: 4px;
+        background: blue;
+    }
+
+    .bingo-line.diag-main {
+        top: 10%;
+        left: 10%;
+        width: 80%;
+        height: 4px;
+        background: green;
+        transform: rotate(45deg);
+        transform-origin: top left;
+    }
+
+    .bingo-line.diag-anti {
+        top: 10%;
+        right: 10%;
+        width: 80%;
+        height: 4px;
+        background: green;
+        transform: rotate(-45deg);
+        transform-origin: top right;
+    }
+
+    @keyframes glow {
+        from {
+            box-shadow: 0 0 5px #ff4081, 0 0 10px #ff4081;
+        }
+        to {
+            box-shadow: 0 0 20px #ff4081, 0 0 30px #ff4081;
+        }
+    }
+
+    .percent-note {
+        margin-top: 0.5rem;
+        font-size: 0.9rem;
+        color: #ffe082;
+        animation: fadeIn 1s ease-in forwards;
+        opacity: 0;
+    }
+
+    @keyframes fadeIn {
+        to {
+            opacity: 1;
+        }
+    }
   </style>
 </head>
 <body>
@@ -170,38 +247,54 @@
     const resetBtn = document.getElementById('reset-button');
     const doneBtn = document.getElementById('done-button');
 
-    const frontTexts = [
-        'I don’t deserve to be here', 'Everyone else is smarter than me', 'I just got lucky',
-        'I’m afraid they’ll discover I’m not good enough', 'It’s only a matter of time before I’m exposed', 'I’m just faking it well',
-        'My achievements are overrated', 'I can’t ask questions – I’ll look stupid', 'I don’t belong here'
+    const cellFrontTexts = [
+    'I’m getting better every day', 'I deserve this opportunity', 'It’s okay to ask for help',
+    'I failed, but I learned from it', 'This isn’t luck – I worked for it', 'I’m still learning',
+    'I acknowledge my own worth', 'Everyone feels unsure sometimes', 'I’m proud of myself'
     ];
 
-    const backTexts = [
-        'I’m getting better every day', 'I deserve this opportunity', 'It’s okay to ask for help',
-        'I failed, but I learned from it', 'This isn’t luck – I worked for it', 'I’m still learning',
-        'I acknowledge my own worth', 'Everyone feels unsure sometimes', 'I’m proud of myself'
+    const cellBackTexts = [
+    'Growth takes time', 'You earned your place', 'Support builds strength',
+    'Failure is feedback', 'Hard work pays off', 'Learning is progress',
+    'You have value', 'Doubt is human', 'Celebrate progress'
+    ];
+
+    // Mock percentage data
+    const percentageData = [
+    67, 45, 82,
+    39, 71, 58,
+    64, 47, 75
     ];
 
     let completed = [];
+    let gameDone = false;
 
     function initGame() {
-      grid.innerHTML = '';
-      completed = Array.from({ length: gridSize }, () => Array(gridSize).fill(false));
+    grid.innerHTML = '';
+    bingoCountEl.innerText = '';
+    completed = Array.from({ length: gridSize }, () => Array(gridSize).fill(false));
+    gameDone = false;
 
-      for (let i = 0; i < gridSize * gridSize; i++) {
+    for (let i = 0; i < gridSize * gridSize; i++) {
         const cell = document.createElement('div');
         cell.className = 'cell';
 
         const card = document.createElement('div');
-        card.className = 'card';
+        card.className = 'flip-card-inner';
 
         const front = document.createElement('div');
-        front.className = 'front';
-        front.innerText = frontTexts[i];
+        front.className = 'flip-card-front';
+        front.innerText = cellFrontTexts[i];
 
         const back = document.createElement('div');
-        back.className = 'back';
-        back.innerText = backTexts[i];
+        back.className = 'flip-card-back';
+        back.innerText = cellBackTexts[i];
+
+        const percentNote = document.createElement('div');
+        percentNote.className = 'percent-note';
+        percentNote.innerText = `${percentageData[i]}% of people also felt this`;
+        percentNote.style.display = 'none';
+        back.appendChild(percentNote);
 
         card.appendChild(front);
         card.appendChild(back);
@@ -211,48 +304,77 @@
         const col = i % gridSize;
 
         cell.addEventListener('click', () => {
-          if (!cell.classList.contains('flipped')) {
+        if (!gameDone) {
             completed[row][col] = !completed[row][col];
-            cell.classList.toggle('selected');
-          }
+            cell.classList.toggle('completed');
+        }
         });
 
         grid.appendChild(cell);
-      }
-
-      bingoCountEl.style.display = 'none';
+    }
     }
 
-    doneBtn.addEventListener('click', () => {
-      document.querySelectorAll('.cell.selected').forEach(cell => {
-        cell.classList.add('flipped');
-      });
-      bingoCountEl.style.display = 'block';
-      updateBingoCount();
+    function showBingoLines(bingos) {
+    bingos.forEach((type, idx) => {
+        const line = document.createElement('div');
+        line.classList.add('bingo-line', type);
+        line.style.setProperty('--index', idx);
+        document.body.appendChild(line);
     });
+    }
 
     function updateBingoCount() {
-      let count = 0;
+    let count = 0;
+    const bingos = [];
 
-      // Rows
-      for (let row of completed) {
-        if (row.every(c => c)) count++;
-      }
+    for (let row = 0; row < gridSize; row++) {
+        if (completed[row].every(c => c)) {
+        count++;
+        bingos.push(`row-${row}`);
+        }
+    }
 
-      // Columns
-      for (let col = 0; col < gridSize; col++) {
-        if (completed.every(row => row[col])) count++;
-      }
+    for (let col = 0; col < gridSize; col++) {
+        if (completed.every(row => row[col])) {
+        count++;
+        bingos.push(`col-${col}`);
+        }
+    }
 
-      // Diagonals
-      if ([0, 1, 2].every(i => completed[i][i])) count++;
-      if ([0, 1, 2].every(i => completed[i][gridSize - 1 - i])) count++;
+    if ([0, 1, 2].every(i => completed[i][i])) {
+        count++;
+        bingos.push('diag-main');
+    }
+    if ([0, 1, 2].every(i => completed[i][gridSize - 1 - i])) {
+        count++;
+        bingos.push('diag-anti');
+    }
 
-      bingoCountEl.innerText = `Bingo: ${count}`;
+    if (count > 0) {
+        bingoCountEl.innerHTML = `<span class="bingo-highlight">Bingo: ${count}</span>`;
+        showBingoLines(bingos);
+    } else {
+        bingoCountEl.innerText = 'Bingo: 0';
+    }
     }
 
     resetBtn.addEventListener('click', () => {
-      initGame();
+    document.querySelectorAll('.bingo-line').forEach(e => e.remove());
+    initGame();
+    });
+
+    doneBtn.addEventListener('click', () => {
+    gameDone = true;
+    document.querySelectorAll('.cell').forEach((cell, i) => {
+        cell.classList.add('flipped');
+        if (cell.classList.contains('completed')) {
+        const percentNote = cell.querySelector('.percent-note');
+        if (percentNote) {
+            percentNote.style.display = 'block';
+        }
+        }
+    });
+    updateBingoCount();
     });
 
     initGame();
