Update: Welcome Message & .gitignore

--- a/Two_Mindset.html
+++ b/Two_Mindset.html
@@ -318,7 +318,7 @@
   <!-- Modal popup -->
   <div id="welcome-modal" class="modal-overlay">
     <div class="modal-content">
-      <h2>Welcome to Growth Mindset Bingo!</h2>
+      <h2>Welcome to Imposter Syndrome Bingo!</h2>
       <p>This interactive game helps you transform negative self-talk into positive affirmations.</p>
       <p>Click on a negative thought you've experienced to flip it and reveal a growth-oriented perspective.</p>
       <p>After selecting all that apply to you, click "DONE" to see how many others share similar experiences.</p>
