Update: Title & Welcome Message

--- a/Two_Mindset.html
+++ b/Two_Mindset.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BINGO | Growth Mindset</title>
+  <title>BINGO | Imposter Syndrome</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -397,7 +397,7 @@
   <!-- Modal popup -->
   <div id="welcome-modal" class="modal-overlay">
     <div class="modal-content">
-      <h2>Welcome to Growth Mindset Bingo!</h2>
+      <h2>Welcome to Imposter Syndrome Bingo!</h2>
       <p>This interactive game helps you transform negative self-talk into positive affirmations.</p>
       <p>Click on a negative thought you've experienced to flip it and reveal a growth-oriented perspective.</p>
       <p>After selecting all that apply to you, click "DONE" to see how many others share similar experiences.</p>
