--- a/v1/Imposter_Mindset.html
+++ b/v1/Imposter_Mindset.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BINGO | Imposter Mindset</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="v1/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -24,6 +24,6 @@
     <p><a href="https://github.com/404notfound-xyye/CTB24-25_Global-Finals_Hackathon_Bingo">Source Code</a></p>
   </footer>
 
-  <script src="script/BINGO_Imposter-Mindset.js"></script>
+  <script src="v1/script/BINGO_Imposter-Mindset.js"></script>
 </body>
 </html>
