Updated: Prev Commit

--- a/v2/Growth-Mindset.html
+++ b/v2/Growth-Mindset.html
@@ -391,6 +391,7 @@
 
   <footer>
     <p>© CTB24-25 Hackathon Group No. H130</p>
+    <p>Prev.Commit: 8821f22</p>
     <p><a href="https://github.com/404notfound-xyye/CTB24-25_Global-Finals_Hackathon_Bingo">Source Code</a></p>
   </footer>
 
