--- a/v2/Growth-Mindset.html
+++ b/v2/Growth-Mindset.html
@@ -379,7 +379,8 @@
 </head>
 <body>
   <header>
-    <h1 class="game-title">Level1 - We are all Imperfect</h1>
+    <h1 class="game-title">We are all Imperfect</h1>
+    <p>Level1</p>
   </header>
 
   <main>
