Update: Footer to display current version and add headers file (Testing)

--- a/v2/Growth-Mindset.html
+++ b/v2/Growth-Mindset.html
@@ -392,7 +392,7 @@
 
   <footer>
     <p>© CTB24-25 Hackathon Group No. H130</p>
-    <p>Prev.Commit: 8d38d7d</p>
+    <p>Current version: <span id="commit-id-placeholder">COMMIT_SHA_PLACEHOLDER</span></p>
     <p><a href="https://github.com/CTB-Team954746/CTB24-25_Global-Finals_Hackathon_Bingo">Source Code</a></p>
   </footer>
 
